<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tbbtfunnyquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            style="@style/Question"
            android:text="@string/Q1" />

        <RadioGroup
            android:id="@+id/question1_Asw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sheldon"
                style="@style/ItemText"
                android:layout_marginEnd="10dp"
                android:text="@string/sheldon" />

            <RadioButton
                android:id="@+id/lenard"
                style="@style/ItemText"
                android:layout_marginEnd="10dp"
                android:text="@string/leonard" />

            <RadioButton
                android:id="@+id/rajesh"
                style="@style/ItemText"
                android:layout_marginEnd="10dp"
                android:text="@string/rajesh" />

            <RadioButton
                android:id="@+id/correct_answer1"
                style="@style/ItemText"
                android:text="@string/howard" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            style="@style/Question"
            android:text="@string/Q2" />

        <CheckBox
            android:id="@+id/zack_answer2"
            style="@style/ItemText"
            android:text="@string/Zack" />

        <CheckBox
            android:id="@+id/kurt_answer2"
            style="@style/ItemText"
            android:text="@string/kurt" />

        <CheckBox
            android:id="@+id/doug_answer2"
            style="@style/ItemText"
            android:text="@string/doug" />

        <CheckBox
            android:id="@+id/eric_answer2"
            style="@style/ItemText"
            android:text="@string/eric" />

        <CheckBox
            android:id="@+id/justin_answer2"
            style="@style/ItemText"
            android:text="@string/Justin" />

        <CheckBox
            android:id="@+id/david_answer2"
            style="@style/ItemText"
            android:text="@string/david_underhill" />

        <TextView
            android:id="@+id/question3"
            style="@style/Question"
            android:text="@string/Q3" />

        <EditText
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/q4">

            <TextView
                android:id="@+id/question4"
                style="@style/Question"
                android:text="@string/Q4" />

            <RadioGroup
                android:id="@+id/question4_Asw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question4"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <RadioButton
                    style="@style/ItemText"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/correct_answer4"
                    style="@style/ItemText"
                    android:layout_marginEnd="10dp"
                    android:text="@string/no" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                android:onClick="submit"
                android:text="@string/submit" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                android:onClick="retry"
                android:text="@string/retry" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
